# Equity-Copilot

./: .gitignore  AGENTS.md  README.md  environment.yml  equity_copilot.db  main.py  project_charter.md  pyproject.toml
api/: deps.py
core/: exceptions.py
db/: init_db.py  session.py
docs/: ADDING_BELIEFS_QUESTIONS.md  ARCHITECTURE.md  BELIEFS_EXAMPLE.md  BELIEF_CONFIDENCE_SPEC.md  CHARTER.md  DATA_INGESTION.md  INVARIANTS.md  LIVE_FIRE.md  LLM_ASSIST.md  MASTER.md  PHASE4_STRUCTURAL_POSITION.md  PHASE_1_COMPLETE.md  PHASE_2_1_COMPLETE.md  PHASE_2_2_COMPLETE.md  PHASE_2_3_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_2_LIFECYCLE.md  PHASE_3_3_LLM.md  PHASE_3_KICKOFF.md  PHILOSOPHY.md  PROPOSALS.md  README.md  REVIEW_CADENCE_SPEC.md  REVIEW_OUTCOME_SPEC.md  ROADMAP.md  SYSTEM_INTENT.md  stock_snapshot_v_1.md
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: add_artifact.py  delete_duplicate_beliefs.py  delete_question.py  import_snapshots.py  seed_belief_without_snapshots.py  seed_beliefs.py  seed_question.py  seed_snapshot_newer_than_belief.py  seed_stress_test.py  test_accept_jpm_review.py  trim_beliefs.py
templates/: belief_detail.html  create_artifact.html  proposal_history.html  question_detail.html  snapshot_detail.html  weekly_review.html
tests/: conftest.py  test_analysis_view_schema.py  test_artifact_integrity_service.py  test_belief_analysis_service.py  test_belief_lifecycle_event_schema.py  test_decision_api.py  test_derivation_determinism.py  test_derivations.py  test_derived_metrics.py  test_introspection_service.py  test_proposal_engine.py  (+7 more)
(+45 files in other folders)
